--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,18 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <title>Pet Adoption Platform</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f0f2f5; margin: 0; }
-        .card { background: white; padding: 2rem; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); text-align: center; }
-        h1 { color: #2d3436; }
-        p { color: #636e72; }
-        .status { color: #00b894; font-weight: bold; }
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #e3f2fd, #f5f7fa);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            padding: 2rem;
+        }
+
+        .card {
+            background: white;
+            max-width: 420px;
+            width: 100%;
+            padding: 2.5rem 2rem;
+            border-radius: 16px;
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.08);
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+
+        h1 {
+            margin-top: 0;
+            margin-bottom: 0.5rem;
+            color: #1e272e;
+            font-size: 1.8rem;
+        }
+
+        p {
+            color: #57606f;
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
+        }
+
+        .video-wrapper {
+            width: 100%;
+            aspect-ratio: 9 / 16;
+            margin-bottom: 1.5rem;
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+        }
+
+        .video-wrapper iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 0.75rem 1.5rem;
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            background-color: #0984e3;
+            color: white;
+            transition: background 0.3s ease, transform 0.2s ease;
+        }
+
+        .btn:hover {
+            background-color: #076dc0;
+            transform: translateY(-2px);
+        }
+
+        .subtitle {
+            font-size: 0.95rem;
+            margin-top: -0.5rem;
+            margin-bottom: 1.5rem;
+            color: #8395a7;
+        }
     </style>
 </head>
+
 <body>
+
 <div class="card">
-    <h1>🐾 Adoptie API</h1>
-    <p class="status">Status: Online</p>
+    <h1>Pet Adoption Platform</h1>
+    <p class="subtitle">Android Application Showcase</p>
+
+    <p>
+        Thank you for your interest in my project.
+        Below you can see a short demo of the app in action.
+    </p>
+
+    <div class="video-wrapper">
+        <iframe
+                src="https://www.youtube.com/embed/wXKYiZ3AQMU"
+                allowfullscreen>
+        </iframe>
+    </div>
+
+    <p>Want to try it yourself?</p>
+
+    <a class="btn"
+       href="https://github.com/iulian-s/AdoptieAndroid/releases"
+       target="_blank">
+        Download from GitHub
+    </a>
 </div>
+
 </body>
 </html>
