Added link to the repository on the main page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -111,6 +111,14 @@
        target="_blank">
         Download from GitHub
     </a>
+
+    <p>Do you wish to get more info or see the server implementation?</p>
+    <a class="btn"
+       href="https://github.com/iulian-s/AdoptieAnimaleDeCompanie"
+       target="_blank"
+    >
+        Check the repository
+    </a>
 </div>
 
 </body>
